--- a/theme/default/src/main/resources/templates/partials/roq-default/sidebar-about.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/sidebar-about.html
@@ -1,7 +1,7 @@
 <section class="about">
-  {#if site.img}
+  {#if site.image}
   <div class="cover-author-image">
-    <a href="{site.url}"><img src="{site.img}" alt="{site.data.name}"></a>
+    <a href="{site.url}"><img src="{site.image}" alt="{site.data.name}"></a>
   </div>
   {/if}
   <div class="author-name">{site.data.name}</div>
