Adjust minutes text

--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
@@ -21,7 +21,7 @@ layout: roq-default/main
     <p>{post.description}</p>
     <span class="post-date">{post.date.format('yyyy, MMM dd')}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
     <span class="post-words">
-      {post.readTime} minute read
+      {post.readTime} minute(s) read
     </span>
   </div>
 </article>
