--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/tag.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/tag.html
@@ -22,7 +22,7 @@ tagging: posts
     <p>{post.description}</p>
     <span class="post-date">{post.date.format('yyyy, MMM dd')}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
     <span class="post-words">
-      {post.readTime} minute read
+      {post.readTime} minute(s) read
     </span>
   </div>
 </article>
