--- a/theme/default/src/main/web/roq.scss
+++ b/theme/default/src/main/web/roq.scss
@@ -152,3 +152,6 @@ table tfoot td {
 
 /* - - - - - - - - - - Media Styles - - - - - - - - - - */
 @import 'scss/media';
+
+/* - - - - - - - - - - 404 - - - - - - - - - - */
+@import 'scss/parts/404-page';
