--- a/theme/default/src/main/resources/templates/partials/roq-default/404.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/404.html
@@ -5,5 +5,5 @@
     {#if page.image}
     <img class="page-image" src="{page.image}" alt="{page.title}">
     {/}
-    <p><b>Roq</b>: If you are lost, find yourself <a href="/">here</a>.</p>
+    <p><b>Roq</b>: If you are lost, find yourself <a href="{site.url}">here</a>.</p>
 </div>
