--- a/theme/default/src/main/resources/templates/partials/roq-default/404.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/404.html
@@ -1,6 +1,6 @@
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
 
-<div class="main-404">
+<div class="main">
     <h1>Roq! Where's my page?</h1>
     {#if page.image}
     <img class="page-image" src="{page.image}" alt="{page.title}">
