--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/default.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/default.html
@@ -4,7 +4,7 @@
   {#include partials/roq-default/head.html /}
   {#insert head /}
 </head>
-<body>
+<body class="{page.data.bodyClass ?: 'default'}">
 
   <div class="wrapper">
     {#insert /}
