--- a/theme/default/src/main/web/roq.scss
+++ b/theme/default/src/main/web/roq.scss
@@ -47,6 +47,12 @@ blockquote {
   color: #ada8a8;
 }
 
+hr {
+  border: none;
+  border-top: 1px solid #cfcfcf;
+  margin: 30px 0;
+}
+
 pre {
   padding: 1rem 2rem;
   overflow: auto;
