--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/404.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/404.html
@@ -1,6 +1,6 @@
 ---
 title: Oops! Roq is saying 404
-layout: :theme/default
+layout: roq-default/default
 bodyClass: page-not-found
 link: 404.html
 ---
