--- a/theme/default/src/main/resources/templates/partials/roq-default/sidebar-copyright.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/sidebar-copyright.html
@@ -1,3 +1,3 @@
 <section class="copyright">
-  <p>{global:now.format('Y')} &copy; {site.data.simple-name}</p>
+  <p>{now.format('Y')} &copy; {site.data.simple-name}</p>
 </section>
