Change github url to use https

--- a/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
@@ -14,7 +14,7 @@
     <li><a href="https://facebook.com/{site.data.social-facebook}" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
     {/if}
     {#if site.data.social-github??}
-    <li class="github"><a href="http://github.com/{site.data.social-github}" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+    <li class="github"><a href="https://github.com/{site.data.social-github}" target="_blank"><i class="fa-brands fa-github"></i></a></li>
     {/if}
     {#if site.data.social-linkedin??}
     <li class="linkedin"><a href="https://in.linkedin.com/in/{site.data.social-linkedin}" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
