--- a/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
@@ -4,11 +4,17 @@
     {#if site.data.social-twitter??}
     <li><a href="https://twitter.com/{site.data.social-twitter}" target="_blank"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
     {/if}
+    {#if site.data.social-bluesky??}
+    <li class="bluesky"><a href="https://bsky.app/profile/{site.data.social-bluesky}" target="_blank"><i class="fa-brands fa-bluesky"></i></a></li>
+    {/if}
+    {#if site.data.social-mastodon??}
+    <li class="mastodon"><a href="{site.data.social-mastodon}" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+    {/if}
     {#if site.data.social-facebook??}
     <li><a href="https://facebook.com/{site.data.social-facebook}" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
     {/if}
     {#if site.data.social-github??}
-    <li class="github"><a href="http://github.com/{site.data.social-github}" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+    <li class="github"><a href="https://github.com/{site.data.social-github}" target="_blank"><i class="fa-brands fa-github"></i></a></li>
     {/if}
     {#if site.data.social-linkedin??}
     <li class="linkedin"><a href="https://in.linkedin.com/in/{site.data.social-linkedin}" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
