--- a/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
@@ -8,7 +8,7 @@
     <li class="bluesky"><a href="https://bsky.app/profile/{site.data.social-bluesky}" target="_blank"><i class="fa-brands fa-bluesky"></i></a></li>
     {/if}
     {#if site.data.social-mastodon??}
-    <li class="mastodon"><a href="{site.data.social-mastodon}" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+    <li class="mastodon"><a href="{site.data.social-mastodon}" rel="me" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
     {/if}
     {#if site.data.social-facebook??}
     <li><a href="https://facebook.com/{site.data.social-facebook}" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
