Add serie extension

--- a/blog/templates/layouts/roq-default/post.html
+++ b/blog/templates/layouts/roq-default/post.html
@@ -1,5 +1,5 @@
 ---
-layout: theme-layouts/roq-default/post
+layout: roq-serie/post
 ---
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
