Add logic using DocumentPage for serie

--- a/blog/templates/layouts/roq-default/post.html
+++ b/blog/templates/layouts/roq-default/post.html
@@ -1,8 +1,10 @@
 ---
-layout: roq-serie/post
+layout: theme-layouts/roq-default/post
 ---
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
+
+{#include partials/roq-serie /}
 
 {#insert /}
 
