--- a/blog/templates/layouts/roq-default/post.html
+++ b/blog/templates/layouts/roq-default/post.html
@@ -4,6 +4,8 @@ layout: theme-layouts/roq-default/post
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
 
+{#include partials/roq-series /}
+
 {#insert /}
 
 {#article-end}
