--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/main.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/main.html
@@ -8,7 +8,7 @@ layout: roq-default/default
   {#insert header}
   <header>
     {#insert about}{#include partials/roq-default/sidebar-about /}{/}
-    {#insert menu}{#include partials/roq-default/sidebar-menu /}{/}
+    {#insert menu}{#include partials/roq-default/sidebar-menu menu=cdi:menu.items /}{/}
   </header> <!-- End Header -->
   {/}
   {#insert footer}
