Introduce plugin-asciidoc-jruby and more

--- a/blog/templates/layouts/doc.html
+++ b/blog/templates/layouts/doc.html
@@ -1,8 +1,6 @@
 ---
 layout: :theme/main
-bodyClass: doc
+bodyClass: documentation
 ---
 
-<article class="doc">
-  {#insert /}
-</article>
+{#insert /}
