--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/main.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/main.html
@@ -4,7 +4,7 @@ layout: roq-default/default
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
 
-<aside class="sidebar">
+<aside class="sidebar main">
   {#insert header}
   <header>
     {#insert about}{#include partials/roq-default/sidebar-about /}{/}
