--- a/theme/default/src/main/web/scss/parts/_home-page.scss
+++ b/theme/default/src/main/web/scss/parts/_home-page.scss
@@ -1,4 +1,4 @@
-.sidebar {
+aside.sidebar.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,6 +18,7 @@
 }
 .page-content {
   flex-grow: 1;
+  padding: 40px;
 }
 .about {
   .cover-author-image {
@@ -65,8 +66,7 @@
   }
 }
 .content-box {
-  padding: 20px;
-  padding-left: 260px;
+  padding: 0px 0px 0px 260px;
 
   display: flex;
   flex-direction: row;
@@ -116,6 +116,7 @@
       margin-left: 10px;
       i {
         margin-right: 20px;
+        width: 18px;
       }
       a {
         color: $body-color;
