Add id to theme for caching

--- a/theme/default/src/main/resources/templates/partials/roq-default/head.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/head.html
@@ -12,6 +12,6 @@
 <meta name="theme-color" content="#263959">
 <meta name="msapplication-navbutton-color" content="#263959">
 <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
-<link rel="stylesheet" href="{site.url.fromRoot('/static/bundle/roq.css')}">
+<link rel="stylesheet" href="{site.url.fromRoot('/static/bundle/roq.css')}?id={config:["roq-default.uuid"]}">
 
 {#bundle /}
