--- a/theme/default/src/main/resources/templates/partials/roq-default/head.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/head.html
@@ -6,6 +6,7 @@
 {#seo page site /}
 {#rss site /}
 
+<base href="{page.url.relative}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="shortcut icon" href="{site.imagesDirUrl.resolve('site-icon.svg')}" type="image/svg+xml">
