--- a/theme/default/src/main/resources/templates/theme-layouts/roq-default/404.html
+++ b/theme/default/src/main/resources/templates/theme-layouts/roq-default/404.html
@@ -3,6 +3,7 @@ title: Oops! Roq is saying 404
 layout: roq-default/default
 bodyClass: page-not-found
 link: 404.html
+sitemap: false
 ---
 
 {#insert content}
