Google site verification

--- a/blog/templates/layouts/roq-default/default.html
+++ b/blog/templates/layouts/roq-default/default.html
@@ -7,4 +7,5 @@ layout: theme-layouts/roq-default/default
 {#head}
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
+<meta name="google-site-verification" content="eWUka2MaSmxhAJUzPFCBHINzwHEHAkPFLgKcBCMqs_4" />
 {/}
