Use public dir for clarity and to allow static files on root

--- a/theme/default/src/main/resources/templates/partials/roq-default/head.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/head.html
@@ -9,7 +9,7 @@
 <base href="{page.url.relative}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link rel="shortcut icon" href="{site.imagesDirUrl.resolve('site-icon.svg')}" type="image/svg+xml">
+<link rel="shortcut icon" href="{site.image('site-icon.svg')}" type="image/svg+xml">
 <meta name="theme-color" content="#263959">
 <meta name="msapplication-navbutton-color" content="#263959">
 <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
