--- a/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
+++ b/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/index.html
@@ -13,7 +13,7 @@ layout: roq-default/main
 {#for post in site.collections.get('posts').paginated(page.paginator)}
 <article class="post">
   {#if post.image}
-  <a class="post-thumbnail" style="background-image: url({post.image})" href="{post.url}"></a>
+  <a class="post-thumbnail" style='background-image: url("{post.image}")' href="{post.url}"></a>
   {/if}
   <div class="post-content">
     <h2 class="post-title"><a href="{post.url}">{post.title}</a></h2>
