Use esbuild-plugin for search

--- a/blog/templates/layouts/roq-default/default.html
+++ b/blog/templates/layouts/roq-default/default.html
@@ -5,6 +5,7 @@ layout: theme-layouts/roq-default/default
 {#insert /}
 
 {#head}
+{#search-script /}
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <meta name="google-site-verification" content="eWUka2MaSmxhAJUzPFCBHINzwHEHAkPFLgKcBCMqs_4" />
