--- a/blog/templates/layouts/roq-default/main.html
+++ b/blog/templates/layouts/roq-default/main.html
@@ -2,13 +2,20 @@
 layout: theme-layouts/roq-default/main
 ---
 
-{#include partials/index-input /}
+{#search-overlay /}
 
 {#insert /}
+
 
 {#description}
 <p>{site.description}</p>
 <p>I crafted this blog myself and <a href="https://github.com/quarkiverse/quarkus-roq/actions/workflows/deploy-blog.yml" target="_blank">published it</a> on GitHub Pages. The sources of this example website are located <a href="https://github.com/quarkiverse/quarkus-roq/tree/main/blog" target="_blank">there</a>.</p>
+{/}
+
+{#menu}
+{#search-button /}
+{#include partials/roq-default/sidebar-menu menu=cdi:menu.nav /}
+{#include partials/roq-default/sidebar-menu menu=cdi:menu.doc menuTitle="Doc" /}
 {/}
 
 {#footer}
