--- a/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-menu.html
+++ b/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-menu.html
@@ -1,8 +1,9 @@
 {@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
 {@java.util.List<io.vertx.core.json.JsonObject> menu}
+{@java.lang.String menuTitle}
 
 <section class="menu">
-  <h3 class="menu-title">MENU</h3>
+  <h3 class="menu-title">{menuTitle ?: 'MENU'}</h3>
   <ul>
     {#for item in menu}
     <li><a href="{site.url(item.path)}" {#if item.target??}target="{item.target}"{/if}><i class="{item.icon}"></i>{item.title}</a> </li>
