--- a/roq-plugin/lunr/runtime/src/main/resources/templates/tags/search-script.html
+++ b/roq-plugin/lunr/runtime/src/main/resources/templates/tags/search-script.html
@@ -4,3 +4,4 @@
     url: '{cdi:site.url.fromRoot('/search-index.json')}'
   });
 </script>
+<link rel="stylesheet" href="{cdi:site.url.fromRoot('/static/bundle/search.css')}?id={config:["quarkus.uuid"]}">
