--- a/roq-theme/default/src/main/resources/templates/partials/roq-default/head.html
+++ b/roq-theme/default/src/main/resources/templates/partials/roq-default/head.html
@@ -9,10 +9,17 @@
 <base href="{page.url.relative}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+{#if site.data.containsKey('icon')}
+{#let icon=site.data.getString('icon')}
+<link rel="shortcut icon" href="{site.image(icon)}" type="{icon.mimeType}">
+{/let}
+{#else if site.imageExists('site-icon.svg')}
 <link rel="shortcut icon" href="{site.image('site-icon.svg')}" type="image/svg+xml">
-<meta name="theme-color" content="#263959">
-<meta name="msapplication-navbutton-color" content="#263959">
-<meta name="apple-mobile-web-app-status-bar-style" content="#263959">
+{/if}
+{#let color=site.data.getString('theme-color').or("#263959")}
+<meta name="theme-color" content="{color}">
+<meta name="msapplication-navbutton-color" content="{color}">
+<meta name="apple-mobile-web-app-status-bar-style" content="{color}">
 <link rel="stylesheet" href="{site.url.fromRoot('/static/bundle/roq.css')}?id={config:["roq-default.uuid"]}">
 
 {#bundle /}
