--- a/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
+++ b/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
@@ -25,5 +25,8 @@
         {#if site.data.social-email??}
         <li><a href="mailto:{site.data.social-email}"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
         {/if}
+        {#if site.data.social-discord??}
+        <li><a href="{site.data.social-discord}" target="_blank"><i class="fa-brands fa-discord" aria-hidden="true"></i></a></li>
+        {/if}
     </ul>
 </section>
