Add youtube icon on social section

--- a/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
+++ b/roq-theme/default/src/main/resources/templates/partials/roq-default/sidebar-contact.html
@@ -28,5 +28,8 @@
         {#if site.data.social-discord??}
         <li><a href="{site.data.social-discord}" target="_blank"><i class="fa-brands fa-discord" aria-hidden="true"></i></a></li>
         {/if}
+        {#if site.data.social-youtube??}
+        <li><a href="{site.data.social-youtube}" target="_blank"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a></li>
+        {/if}
     </ul>
 </section>
