--- a/roq-frontmatter/deployment/src/test/resources/site/templates/partials/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/templates/partials/header.html
@@ -1,5 +1,8 @@
-  {#ga4 tag="" /}
-  <title>{page.title ?: site.title}</title>
-  <meta name="description" content="{page.description ?: 'description'}"/>
-  <base href="{site.url.root.relative}">
-  <meta name="twitter:url" content="{site.url.absolute}">
+<title>{page.title ?: site.title}</title>
+<meta name="description" content="{page.description ?: 'description'}"/>
+<base href="{site.url.root.relative}">
+<meta name="twitter:url" content="{site.url.absolute}">
+
+{#if site.data.containsKey("analytics")}
+{#ga4 tag=site.data.getJsonObject('analytics').getString("ga4", "") /}
+{/if}
