--- a/blog/templates/layouts/doc.html
+++ b/blog/templates/layouts/doc.html
@@ -1,7 +1,7 @@
 ---
 layout: :theme/main
 bodyClass: documentation
-index-boost: 30
+search-boost: 30
 ---
 {#let attributes = page.data.attributes}
 
