--- a/roq-plugin/lunr/runtime/src/main/resources/templates/tags/search-overlay.html
+++ b/roq-plugin/lunr/runtime/src/main/resources/templates/tags/search-overlay.html
@@ -7,6 +7,7 @@
         class="search-input"
         id="search-input"
         placeholder="Search..."
+        autocomplete="off"
         autofocus
       />
     </div>
