FM attributes support for Asciidoc and fixes

--- a/roq-theme/default/src/main/web/scss/_media.scss
+++ b/roq-theme/default/src/main/web/scss/_media.scss
@@ -54,7 +54,7 @@
   .about {
     text-align: center;
     margin: 10px auto auto;
-    img {
+   .cover-author-image img {
       width: 100px;
       height: 100px;
       border-radius: 100%;
