--- a/roq-theme/default/src/main/web/scss/parts/_post-page.scss
+++ b/roq-theme/default/src/main/web/scss/parts/_post-page.scss
@@ -53,7 +53,7 @@
     gap: 12px;
     flex-wrap: wrap;
     padding-bottom: 30px;
-    margin: 30px 0  ;
+    margin: 50px 0 30px;
     border-bottom: 1px solid $dark-gray;
 
     .footer-links {
