--- a/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/post.html
+++ b/roq-theme/default/src/main/resources/templates/theme-layouts/roq-default/post.html
@@ -1,5 +1,7 @@
 ---
 layout: roq-default/main
+asciidoc-attributes:
+  notitle: true
 ---
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
