--- a/roq-theme/default/src/main/web/scss/_media.scss
+++ b/roq-theme/default/src/main/web/scss/_media.scss
@@ -1,5 +1,5 @@
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width: 992px) {
   .post {
     width: 48%;
     max-width: 100%;
@@ -12,8 +12,10 @@
 
     .post-content {
       width: 100%;
+
       .post-title {
         margin: 0 0 5px;
+
         a {
           font-size: 21px;
         }
@@ -22,7 +24,7 @@
   }
 }
 
-@media only screen and (max-height : 1025px) {
+@media only screen and (max-height: 1025px) {
   aside.sidebar.main {
     .about p {
       display: none;
@@ -31,7 +33,7 @@
 }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
   aside.sidebar.main {
     position: relative;
     display: flex;
@@ -47,20 +49,25 @@
     }
 
   }
-  .wrap-content, .page-content {
-    padding: 20px;
+
+  .wrap-content {
+    padding: 10px;
+  }
+  .content-box, .page-content {
+    padding: 0px;
   }
 
   .about {
     text-align: center;
     margin: 10px auto auto;
-   .cover-author-image img {
+
+    .cover-author-image img {
       width: 100px;
       height: 100px;
       border-radius: 100%;
       margin-bottom: 10px;
     }
-}
+  }
 
   .content-box {
     padding: 20px 10px;
@@ -70,20 +77,27 @@
     align-items: stretch;
   }
 
-.contact-title, .copyright {
-  display: none;
-}
+  .contact-title, .copyright {
+    display: none;
+  }
+
+
+  pre {
+    padding: 0;
+  }
 
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
-  .content-box {
-    padding: 10px;
+@media only screen and (max-width: 480px) {
+  .wrap-content {
+    padding: 5px;
   }
-  .wrap-content, .page-content {
-    padding: 10px;
+  .content-box, .page-content {
+    padding: 0px;
   }
+
+
   .post {
     width: 98%;
     max-width: 100%;
@@ -96,8 +110,10 @@
 
     .post-content {
       width: 100%;
+
       .post-title {
         margin: 0 0 5px;
+
         a {
           font-size: 21px;
         }
